--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -1,6 +1,6 @@
 id: miles-tone
 link: blog/author/miles-tone
-first_name: Miles
+first_name: Joshua
 last_name: Tone
 photo: images/miles-tone.jpg
 bio: >-
