--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -3,6 +3,5 @@ link: blog/author/miles-tone
 first_name: Joshua
 last_name: Tone
 photo: images/miles-tone.jpg
-bio: >-
-  Aliquam vestibulum morbi blandit cursus risus at ultrices mi. Massa placerat
-  duis ultricies lacus. Amet justo donec enim diam.
+bio: |
+  Founder / CEO
