--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -1,6 +1,6 @@
 id: dianne-ameter
 link: blog/author/dianne-ameter
-first_name: Joshua
+first_name: Ashlee
 last_name: Ameter
 photo: images/dianne-ameter.jpg
 bio: >-
