--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -1,6 +1,6 @@
 id: gordon-norman
 link: blog/author/gordon-norman
-first_name: Evan
+first_name: Mike
 last_name: Norman
 photo: images/gordon-norman.jpg
 bio: >-
