--- a/src/data/team/eleanor-carr.yaml
+++ b/src/data/team/eleanor-carr.yaml
@@ -1,7 +1,7 @@
 id: eleanor-carr
 first_name: Bruce
 last_name: Carr
-photo: images/eleanor-carr.jpg
+photo: images/image_6483441.JPG
 bio: >-
   Enim sit amet venenatis urna cursus eget nunc scelerisque viverra. Ligula
   ullamcorper malesuada proin libero nunc consequat interdum.
