--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -2,7 +2,7 @@ id: dianne-ameter
 link: blog/author/dianne-ameter
 first_name: Ashlee
 last_name: Ameter
-photo: images/dianne-ameter.jpg
+photo: images/unnamed (8).jpg
 bio: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl ligula,
   cursus id molestie vel, maximus aliquet risus.
