--- a/src/data/team/hanson-deck.yaml
+++ b/src/data/team/hanson-deck.yaml
@@ -1,7 +1,7 @@
 id: hanson-deck
 first_name: Daniel
 last_name: Deck
-photo: images/unnamed.jpg
+photo: images/unnamed (1).jpg
 bio: >-
   Suspendisse ante mi, tincidunt sit amet odio sed, condimentum ultricies nunc.
   Nam iaculis commodo dui quis suscipit. Ut eu porttitor enim.
