miles-tone.yaml: updated photo

--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -2,7 +2,7 @@ id: miles-tone
 link: blog/author/miles-tone
 first_name: Joshua
 last_name: Tone
-photo: images/miles-tone.jpg
+photo: images/profile-pic (4).png
 bio: |
   Founder / CEO
 
