--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -5,3 +5,4 @@ last_name: Ameter
 bio: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl ligula,
   cursus id molestie vel, maximus aliquet risus.
+photo: images/ash.jpg
