dianne-ameter.yaml: updated link

--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -1,5 +1,5 @@
 id: dianne-ameter
-link: blog/author/dianne-ameter
+link: blog/author/ashlee
 first_name: Ashlee
 bio: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl ligula,
