miles-tone.yaml: updated link

--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -1,5 +1,5 @@
 id: Joshua
-link: blog/author/miles-tone
+link: blog/author/Joshua
 first_name: Joshua
 last_name: Tone
 photo: images/profile-pic (4).png
