--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -2,9 +2,15 @@ id: Joshua
 link: blog/author/Joshua
 first_name: Joshua
 photo: images/profile-pic (4).png
-bio: |
+bio: >
   Founder / CEO
 
 
-
-  coming soon
+  An Entrepenuer by every definition, Joshua began developing the core of Sol
+  Lotus many years ago. Each challenge presented along the path delivered what
+  felt to be impossible odds to beat, so the project was put on hold and others
+  prioritized. With so many changes toward liberating individual freedom from
+  the bindings of wester medicines, there could have been no better time. With a
+  truly sincere desire to help others, the ability to bring the natural care
+  that helped him and his loved ones for so many years to the public was tailor
+  made. 
