miles-tone.yaml: updated bio

--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -13,4 +13,6 @@ bio: >
   the bindings of wester medicines, there could have been no better time. With a
   truly sincere desire to help others, the ability to bring the natural care
   that helped him and his loved ones for so many years to the public was tailor
-  made. 
+  made. It's such an amazing time we live in where the ancient practices that
+  sustained happieness, energy and longevity have a chance to emerge back into
+  our daily practice
