--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -1,7 +1,17 @@
 id: ashlee
 link: blog/author/ashlee
 first_name: Ashlee
-bio: >-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl ligula,
-  cursus id molestie vel, maximus aliquet risus.
+bio: >
+  Ashlee is one of the most valuable members on our team. With a background in
+  fashion merchandising followed by many years as an operations executive in the
+  banking industry, she is indispensable. Without her leadership and strict
+  compliance, navigating the uncertainty where ancient traditional theraputics
+  and modern policy would have been near impossible. Her kind spirit and
+  analytical thought process make every interaction a pleasure. There's never
+  been an issue where employee or customer alike haven't concluded with a
+  feeling of appreciation and gratitude. Everyone always leaves her office with
+  a smile on their face regardless of the difficulty to be addressed. When she
+  agreed to co-found Sol Lotus, it became apparent that this was going to be a
+  success. She brightens the room with her smile, never seems to miss a detail
+  and ensures we remain on course for success.
 photo: images/ash.jpg
