eleanor-carr.yaml: updated last_name

--- a/src/data/team/eleanor-carr.yaml
+++ b/src/data/team/eleanor-carr.yaml
@@ -1,6 +1,6 @@
 id: Dexter
 first_name: Dexter
-last_name: Carr
+last_name: Bear
 photo: images/image_6483441.JPG
 bio: >-
   Enim sit amet venenatis urna cursus eget nunc scelerisque viverra. Ligula
