gordon-norman.yaml: updated link

--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -1,5 +1,5 @@
 id: Cameron
-link: blog/author/gordon-norman
+link: blog/author/cam
 first_name: Mike
 last_name: Norman
 photo: images/gordon-norman.jpg
