gordon-norman.yaml: updated photo

--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -1,7 +1,7 @@
 id: Cameron
 link: blog/author/cam
 first_name: Cam
-photo: images/gordon-norman.jpg
+photo: images/cam.jpg
 bio: >-
   Sagittis nisl rhoncus mattis rhoncus urna neque viverra. In est ante in nibh
   mauris cursus mattis molestie porta non pulvinar neque.
