gordon-norman.yaml: updated bio

--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -2,6 +2,13 @@ id: Cameron
 link: blog/author/cam
 first_name: Cam
 photo: images/cam.jpg
-bio: >-
-  Sagittis nisl rhoncus mattis rhoncus urna neque viverra. In est ante in nibh
-  mauris cursus mattis molestie porta non pulvinar neque.
+bio: >
+  Nobody is really sure about the true origin of Cameron. He was such a likable
+  guy that one day we all met by chance and he left such an imprint that he
+  instantly was adopted into the family. His exception interpersonal skills and
+  likability coupled with an extrodinary work ethic enable him to make every one
+  in the room feel liike he is talking right to them. I think he was into
+  brewing beer historically. Seemed like a good fit to reach the younger
+  generation and educate them about the amazing flavors of feeling and, well.
+  dankness of all the Sol Lotus products. Once you meet him, we can't wait to
+  see your order come through our fullfilment team
