gordon-norman.yaml: updated first_name

--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -1,6 +1,6 @@
 id: Cameron
 link: blog/author/cam
-first_name: Cam
+first_name: Cameron
 photo: images/cam.jpg
 bio: >
   Nobody is really sure about the true origin of Cameron. He was such a likable
