dianne-ameter.yaml: updated first_name

--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -1,6 +1,6 @@
 id: ashlee
 link: blog/author/ashlee
-first_name: Ashlee
+first_name: Ashlee T
 bio: >
   Ashlee is one of the most valuable members on our team. With a background in
   fashion merchandising followed by many years as an operations executive in the
