miles-tone.yaml: updated first_name

--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -1,6 +1,6 @@
 id: Joshua
 link: blog/author/Joshua
-first_name: Joshua
+first_name: Joshua S
 photo: images/profile-pic (4).png
 bio: >
   Founder / CEO
