dianne-ameter.yaml: updated bio

--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -2,6 +2,9 @@ id: ashlee
 link: blog/author/ashlee
 first_name: Ashlee T
 bio: >
+  Co-Founder / C.O.O.
+
+
   Ashlee is one of the most valuable members on our team. With a background in
   fashion merchandising followed by many years as an operations executive in the
   banking industry, she is indispensable. Without her leadership and strict
