eleanor-carr.yaml: updated bio

--- a/src/data/team/eleanor-carr.yaml
+++ b/src/data/team/eleanor-carr.yaml
@@ -3,6 +3,9 @@ first_name: Dexter
 last_name: Bear
 photo: images/image_6483441.JPG
 bio: >
+  President of Treats
+
+
   With one of the most selective and refined palates in the Canine world, Dexter
   ensures that every production of of pet products beat the competition every
   time. He's a pup that knows what he wants and isn't afraid to tell you exactly
