gordon-norman.yaml: updated bio

--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -3,6 +3,9 @@ link: blog/author/cam
 first_name: Cameron
 photo: images/cam.jpg
 bio: >
+  Sales or Product Testing or Something like that
+
+
   Nobody is really sure about the true origin of Cameron. He was such a likable
   guy that one day we all met by chance and he left such an imprint that he
   instantly was adopted into the family. His exception interpersonal skills and
