gordon-norman.yaml: updated bio

--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -3,7 +3,7 @@ link: blog/author/cam
 first_name: Cameron
 photo: images/cam.jpg
 bio: >
-  Sales or Product Testing or Something like that
+  Concierge Customer Care
 
 
   Nobody is really sure about the true origin of Cameron. He was such a likable
