dianne-ameter.yaml: updated photo

--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -17,4 +17,4 @@ bio: >
   agreed to co-found Sol Lotus, it became apparent that this was going to be a
   success. She brightens the room with her smile, never seems to miss a detail
   and ensures we remain on course for success.
-photo: images/a3.png
+photo: images/ODUzMDcuanBn.jpg
