miles-tone.yaml: updated photo

--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -1,7 +1,7 @@
 id: Joshua
 link: blog/author/Joshua
 first_name: Joshua S
-photo: images/profile-pic (4).png
+photo: images/Mjg5NTIuanBn.jpg
 bio: >
   Founder / CEO
 
