gordon-norman.yaml: updated photo

--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -1,7 +1,7 @@
 id: Cameron
 link: blog/author/cam
 first_name: Cameron
-photo: images/cam.jpg
+photo: images/MDY4NjkuanBn.jpg
 bio: >
   Concierge Customer Care
 
