dianne-ameter.yaml: updated bio

--- a/src/data/team/dianne-ameter.yaml
+++ b/src/data/team/dianne-ameter.yaml
@@ -4,17 +4,17 @@ first_name: Ashlee T
 bio: |
   Co-Founder / C.O.O.
 
-  Ashlee is one of the most valuable members on our team. With a background in 
-  merchandising, followed by many years as an Operations Executive in the 
-  banking industry, she is indispensable. Without her leadership and 
-  strict compliance, navigating the uncertainty of ancient traditional 
+  Ashlee is one of the most valuable members on our team. With a background in
+  merchandising, followed by many years as an Operations Executive in the
+  banking industry, she is indispensable. Without her leadership and
+  strict compliance, navigating the uncertainty of ancient traditional
   therapeutics and modern policy would have been near impossible. Her kind
-   spirit and analytical thought process makes every interaction a 
-  pleasure. There's never been an issue where an employee or customer 
-  alike hasn't concluded with a feeling of appreciation and gratitude. 
-  Everyone always leaves her office with a smile on their face regardless 
-  of the difficulty to be addressed. When she agreed to co-found Sol 
-  Lotus, it became apparent that this was going to be a success. She 
-  brightens the room with her smile, never seems to miss a detail and 
-  ensures we remain on course for success
+  spirit and analytical thought process makes every interaction a
+  pleasure. There's never been an issue where an employee or customer
+  alike hasn't concluded with a feeling of appreciation and gratitude.
+  Everyone always leaves her office with a smile on their face regardless
+  of the difficulty to be addressed. When she agreed to co-found Sol
+  Lotus, it became apparent that this was going to be a success. She
+  brightens the room with her smile, never seems to miss a detail and
+  ensures we remain on course for success.
 photo: images/ODUzMDcuanBn.jpg
