miles-tone.yaml: updated bio

--- a/src/data/team/miles-tone.yaml
+++ b/src/data/team/miles-tone.yaml
@@ -2,17 +2,17 @@ id: Joshua
 link: blog/author/Joshua
 first_name: Joshua S
 photo: images/Mjg5NTIuanBn.jpg
-bio: >
-  Founder / CEO
+bio: |
+  Founder / C.E.O.
 
-
-  An Entrepenuer by every definition, Joshua began developing the core of Sol
-  Lotus many years ago. Each challenge presented along the path delivered what
-  felt to be impossible odds to beat, so the project was put on hold and others
-  prioritized. With so many changes toward liberating individual freedom from
-  the bindings of wester medicines, there could have been no better time. With a
-  truly sincere desire to help others, the ability to bring the natural care
-  that helped him and his loved ones for so many years to the public was tailor
-  made. It's such an amazing time we live in where the ancient practices that
-  sustained happieness, energy and longevity have a chance to emerge back into
-  our daily practice
+  An Entrepenuer by every definition, Joshua began developing the core of 
+  Sol Lotus many years ago. Each challenge presented along the path 
+  delivered what felt to be impossible odds to beat, so the project was 
+  put on hold and others prioritized. With so many changes toward 
+  liberating individual freedom from the bindings of western medicines, 
+  there could have been no better time. With a truly sincere desire to 
+  help others, the ability to bring the natural care that helped him and 
+  his loved ones for so many years to the public was tailor made. It's 
+  such an amazing time we live in where the ancient practices that 
+  sustained happiness, energy and longevity have a chance to emerge back 
+  into our daily practice.
