eleanor-carr.yaml: updated bio

--- a/src/data/team/eleanor-carr.yaml
+++ b/src/data/team/eleanor-carr.yaml
@@ -2,15 +2,15 @@ id: Dexter
 first_name: Dexter
 last_name: Bear
 photo: images/image_6483441.JPG
-bio: >
-  President of Treats
+bio: |
+  Canine CBD Ambassador
 
-
-  With one of the most selective and refined palates in the Canine world, Dexter
-  ensures that every production of of pet products beat the competition every
-  time. He's a pup that knows what he wants and isn't afraid to tell you exactly
-  what he thinks. He takes the role of inter species ambassador and quality
-  assurance for his kind very seriously. In his 10 years, he's learned a lot of
-  tricks and still picks up a new one every once and a while. When you watch
-  your furry family member escape pain and anxiety and begin playing like they
-  were just a puppy again, think of Dexter
+  With one of the most selective and refined palates in the Canine world, 
+  Dexter ensures that every production of pet products beats the 
+  competition. He's a pup that knows what he wants and isn't afraid to 
+  tell you exactly what he thinks. He takes the role of Inter Species 
+  Ambassador and Quality Assurance for his kind very seriously. In his 10 
+  years, he's learned a lot of tricks and still picks up a new one every 
+  once and a while. When you watch your furry family member escape pain 
+  and anxiety and begin playing like they were just a puppy again, think 
+  of Dexter.
