gordon-norman.yaml: updated bio

--- a/src/data/team/gordon-norman.yaml
+++ b/src/data/team/gordon-norman.yaml
@@ -2,16 +2,15 @@ id: Cameron
 link: blog/author/cam
 first_name: Cameron
 photo: images/MDY4NjkuanBn.jpg
-bio: >
+bio: |
   Concierge Customer Care
 
-
-  Nobody is really sure about the true origin of Cameron. He was such a likable
-  guy that one day we all met by chance and he left such an imprint that he
-  instantly was adopted into the family. His exception interpersonal skills and
-  likability coupled with an extrodinary work ethic enable him to make every one
-  in the room feel liike he is talking right to them. I think he was into
-  brewing beer historically. Seemed like a good fit to reach the younger
-  generation and educate them about the amazing flavors of feeling and, well.
-  dankness of all the Sol Lotus products. Once you meet him, we can't wait to
-  see your order come through our fullfilment team
+  The true origin of Cameron is unknown. One day we all met by chance and he 
+  left such an imprint that he instantly was adopted into the family. His 
+  exceptional interpersonal skills and likability coupled with an 
+  extraordinary work ethic enable him to make everyone in the room feel 
+  like he is talking right to them. With a background in beer brewing, he 
+  seemed like the perfect fit to reach the younger generation and educate 
+  them about the amazing flavors of feeling and dankness of all of the Sol
+   Lotus products. We can't wait to see your order come through our 
+  fulfillment team so that you have the chance to meet him.
